k8s/kubernetes-dashboard/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.aws.wiktorkowalski.pl`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
      middlewares:
        - name: secure-headers
          namespace: traefik-system
  tls:
    secretName: dashboard-tls
